objects/pw_cc__Setting__c.object
<CustomObject>
    <description>Pre v1.7 FieldToValidate object now deprecated to allow for new features, please migrate your settings to the new custom settings objects and disregard</description>
    <fields>
        <fullName>pw_cc__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Boolean Value</description>
        <label>BooleanValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__IntegerValue__c</fullName>
        <label>IntegerValue</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pw_cc__StringListValue__c</fullName>
        <description>StringList Value.</description>
        <label>StringListValue</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pw_cc__StringValue__c</fullName>
        <description>A string value</description>
        <label>StringValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__ValueType__c</fullName>
        <description>The type of the value for this setting.</description>
        <label>ValueType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>StringList</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>